--- a/HospitalMessenger/Views/Doctor/List.cshtml
+++ b/HospitalMessenger/Views/Doctor/List.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DoctorViewModel
 
 <div>
     <h2>Все доктора.</h2>
@@ -7,16 +7,8 @@
     <div class="row">
         @foreach (var doctor in Model.Doctors)
         {
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                    <img src="@doctor.ImageUrl" alt="" />
-                    <div class="caption">
-                        <h3 class="pull-right">@doctor.Age</h3>
-                        <h3>@doctor.Surname @doctor.Name @doctor.MiddleName</h3>
-                        <p>@doctor.Position</p>
-                    </div>
-            </div>
-        
-    }
+         @Html.Partial("DoctorsSummary", doctor);
+        }
     </div>
 </div>
 
