--- a/HospitalMessenger/Views/Shared/DoctorsSummary.cshtml
+++ b/HospitalMessenger/Views/Shared/DoctorsSummary.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Doctor
 
-<div class="col-sm-4 col-lg-4 col-md-4">
-    <img src="@Model.ImageUrl" alt="" />
+<div class="col-sm text-center">
+    <img  src="@Model.ImageUrl" alt="" />
     <div class="caption">
-        <h3 class="pull-right">@Model.Age</h3>
         <h3>@Model.Surname @Model.Name @Model.MiddleName</h3>
+        <h3 class="pull-right">@Model.Age лет</h3>
         <p>@Model.Position</p>
     </div>
 </div>
