--- a/HospitalMessenger/Views/Shared/_Layout.cshtml
+++ b/HospitalMessenger/Views/Shared/_Layout.cshtml
@@ -1,18 +1,42 @@
 ﻿<!DOCTYPE html>
 
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-        <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/Content/Site.css" rel="stylesheet" />
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <title>HospitalMessenger</title>
-    </head>
-    <body>
-        <div class="container body-content">
-            @RenderBody()
+<html class="h-100">
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <title>HospitalMessenger</title>
+</head>
+<body class="d-flex flex-column h-100">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">HospitalMessenger</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav  mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/Doctor/List">Главная страница <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Contact/Index">Контакты</a>
+                </li>
+            </ul>
+            <a class="navbar-text" href="#">Вход</a>
+            <a class="navbar-text ml-1" href="#">Регистрация</a>
         </div>
-    </body>
+    </nav>
+    <div class="container body-content">
+        @RenderBody()
+    </div>
+    <footer class="footer mt-auto py-3  bg-dark" >
+        <div class="container">
+            <span class="text-muted ">Ссылка на сайт больницы : </span>
+        </div>
+    </footer>
+    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+</body>
 </html>
