--- a/HospitalMessenger/Views/_ViewImports.cshtml
+++ b/HospitalMessenger/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using HospitalMessenger.ViewModels
 @using HospitalMessenger.Data.Models
+
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper HospitalMessenger.TagHelper.*, HospitalMessenger
