--- a/HospitalMessenger/wwwroot/Content/Site.css
+++ b/HospitalMessenger/wwwroot/Content/Site.css
@@ -46,6 +46,31 @@ a.remove {
     margin-right: 10px !important
 }
 
-.carousel img {
-    min-width: 100%;
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    height: 100px;
+    width: 100px;
+    background-size: 100%, 100%;
+    background-image: none;
+}
+
+.carousel-control-next-icon:after {
+content: '>';
+font-size: 55px;
+color: red;
+}
+
+.carousel-control-prev-icon:after {
+content: '<';
+font-size: 55px;
+color: red;
+}
+
+#demo{
+    width:895px;
+    margin:0 auto;
+}
+body > .container {
+    padding-top:90px;
 }
